[gd_scene load_steps=4 format=3 uid="uid://dns4isn3f1jrr"]

[ext_resource type="Script" uid="uid://cin0uunse1j3k" path="res://menus/settings_menu.gd" id="1_8u2x0"]

[sub_resource type="LabelSettings" id="LabelSettings_8g2cr"]
font_size = 64
font_color = Color(0.615686, 1, 0.717647, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0.956863, 0, 0.431373)

[sub_resource type="LabelSettings" id="LabelSettings_pvboe"]
font_size = 32
outline_size = 2
outline_color = Color(0, 1, 0, 1)
shadow_color = Color(0, 1, 0, 1)
shadow_offset = Vector2(-1, -1)

[node name="SettingsMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8u2x0")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Tree Simulator"
label_settings = SubResource("LabelSettings_8g2cr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PausedLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 112.0
offset_bottom = 230.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_pvboe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -99.0
offset_right = 189.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2

[node name="LanguageContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="ButtonsContainer/LanguageContainer"]
layout_mode = 2
text = "Language: "

[node name="OptionButton" type="OptionButton" parent="ButtonsContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "PortuguÃªs"
popup/item_1/id = 1

[node name="FullScreenContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ButtonsContainer/FullScreenContainer"]
layout_mode = 2
text = "Fullscreen:"

[node name="CheckButton" type="CheckButton" parent="ButtonsContainer/FullScreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="BrightnessContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ButtonsContainer/BrightnessContainer"]
layout_mode = 2
text = "Brightness:"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="ButtonsContainer/BrightnessContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="ButtonsContainer/LanguageContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="ButtonsContainer/FullScreenContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="drag_ended" from="ButtonsContainer/BrightnessContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="pressed" from="ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
